force-app/main/default/objects/Pricing_Contract__c/Pricing_Contract__c.object-meta.xml
<CustomObject>
    <label>Pricing Contract</label>
    <nameField>
        <label>Pricing Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>