force-app/main/default/objects/Pricing_Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <externalId>true</externalId>
    <label>Contract</label>
    <length>50</length>
    <type>Text</type>
</CustomField>