force-app/main/default/objects/Pricing_Contract__c/fields/SubGroup_Description__c.field-meta.xml
<CustomField>
    <fullName>SubGroup_Description__c</fullName>
    <label>SubGroup Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>