force-app/main/default/objects/Pricing_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract__c</columns>
    <columns>SubGroup__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>SubGroup_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>1222</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>